This file lists all changes made to the game driver in all gory detail.
See the file HISTORY for a user-oriented summary of all the changes.

22-Jan-2004 (Lars Duening)  (3.3.662)
  - (efuns.c) Deep-copying a mapping employing shared arrays as keys (e.g. ([
       arr, ([ arr ]) ])) prematurely freed the copied array as the code
       didn't keep track of the copied data itself, but of the svalues it was
       stored in - and for mapping keys these svalues were local variables
       (Bug #0000351).
  - (comm.c) If telnet-negs were turned off in linemode, the driver started
       treating lineends as if in charmode, which the higher routines
       didn't expect (reported by Philip).

19-Jan-2004 (Lars Duening)  (3.3.661)
  - (gcollect.c) When a program was swapped out, the GC didn't clear the refs
       of its name (Bug #0000348).
  - (mregex.c) If a regexp function was asked to use both RE_TRADITIONAL
       and RE_PCRE, and the regexp doesn't compile for both, the resulting
       error leaked some structures (Bug #0000349).

17-Jan-2004 (Lars Duening)  (3.3.660)
  - (gcollect.c) The names of programs of destructed objects didn't
       get their references cleared properly in a GC, leaking the
       program names if the destructed object was held by
       a self-reference (Bug #0000099).
  - (closure.c) Determining the closure location leaked the
       program's name (Bug  #0000347).

16-Jan-2004 (Lars Duening)  (3.3.659)
  - (configure) Corrected the mySQL library check (Bug #0000346).

14-Jan-2004 (Lars Duening)  (3.3.658)
  - (interpret, array.c, mapping.c, parse.c, simulate.c, files.c)
       The new function push_error_handler() simplifies the creation
       of T_ERROR_HANDLER values.
  - (object.c) Exceptions during a restore no longer leak values
       (Bug #0000344).
  - (smalloc.c) The extended large-free statistics was still off.

14-Jan-2004 (Lars Duening)  (3.3.657)
  - (array.c) Efun unique_array() no longer leaks memory if aborted