@@ -14,7 +14,6 @@ extern p_int alloc_action_sent;
 
 extern void free_action_temporaries(void);
 extern void free_action_sent(action_t *p);
-extern void purge_action_sent(void);
 extern void remove_action_sent(object_t *ob, object_t *player);
 extern void remove_shadow_action_sent(object_t *ob, object_t *player);
 extern void remove_environment_sent(object_t *player);
