@@ -1717,8 +1717,6 @@ garbage_collection(void)
     free_defines();
     free_all_local_names();
     remove_unknown_identifier();
-    purge_action_sent();
-    purge_shadow_sent();
     check_wizlist_for_destr();
     cleanup_all_objects();
     if (current_error_trace)
